--- a/src/content/posts/cored20rpg/spells.mdx
+++ b/src/content/posts/cored20rpg/spells.mdx
@@ -13,6 +13,7 @@ author: Антон "Palant" Палихов
 **НОВЫЕ ЗАКЛИНАНИЯ:**
 
 ---
+## А
 
 ### Адское возмездие
 
@@ -217,6 +218,8 @@ author: Антон "Palant" Палихов
 Вы указываете на облако, которое немедленно спускается к вам. Облаку требуется 3 раунда, чтобы добраться до вас. За это время вы определяете его форму, и облако преобразуется во все, что вы можете себе представить. Форма не влияет на его работу. Вы должны быть на улице, чтобы использовать это заклинание.
 
 Вы и до десяти других существ по вашему выбору можете сесть на воздушную лодку, которая летит со скоростью 100 футов в раунд под вашим телепатическим управлением. Считается, что вы владеете аэроглиссером. Находясь на воздушной лодке, вы получаете сопротивление урону от молнии и грома, а также невосприимчивы к урону, причиняемому немагическими ветрами. Аэролодка имеет КЗ 13 и 100 хитов.
+
+## Б
 
 ### Барьер для жизни
 
@@ -444,6 +447,8 @@ author: Антон "Palant" Палихов
 
 Каждый раз, когда вы совершаете такую дальнобойную атаку, ваш колчан волшебным образом заменяет боеприпас, который вы использовали, на аналогичный немагический боеприпас. Любые части боеприпасов, созданные этим заклинанием, распадаются, когда заклинание заканчивается. Если вы больше не носите или не носите колчан, заклинание заканчивается.
 
+## В
+
 ### Ведьмин шторм
 
 3-й круг, эвокация
@@ -572,6 +577,8 @@ author: Антон "Palant" Палихов
 
 **Используя более высокий круг.** Если вы произносите это заклинание, используя ячейку заклинания 9-го уровня, вы также можете выбрать любых желающих существ, а не только гуманоидов.
 
+## Г
+
 ### Героизм
 
 1-й круг, очарование
@@ -651,6 +658,8 @@ author: Антон "Palant" Палихов
 Пока длится заклинание, в следующий раз, когда вы попадаете по существу дистанционной атакой оружием, возникает град шипов, который вырывается из вашего дистанционного оружия или боеприпаса. В дополнение к обычному эффекту атаки, её цель и каждое существо в пределах 5 футов от неё должны совершить спасбросок Ловкости. Каждое существо получает 1к12 колющего урона при провале или половину этого урона при успехе.
 
 **Используя более высокий круг.** Если вы сотворяете это заклинание, используя ячейку 2-го круга или выше, урон увеличивается на 1к12 за каждый круг ячейки выше 1-го (мак¬симум до 6к12).
+
+## Д
 
 ### Добрая надежда
 
@@ -2403,6 +2412,21 @@ author: Антон "Palant" Палихов
 Ваша цель приходит в ярость. На время действия заклинания цель получает бонус +2 ко всем атакам и броскам урона и получает 10 временных хитов. Когда заклинание заканчивается, цель получает один уровень истощения. Если вы произносите это заклинание про себя, то сохраняете концентрацию, как обычно, даже если в ярости вы не можете сохранять концентрацию.
 
 **Используя более высокий круг.** За каждый круг ячейки выше 2-го это заклинание воздействует на еще одну цель, которой необходимо коснутся частью действия, использованного для его сотворения.
+
+---
+
+[Заклинания CORE D20 RPG](https://cyborgsandmages.com/posts/cored20rpg/spells)
+
+[Заклинания пятой редакции измененные в CORE D20 RPG](https://cyborgsandmages.com/posts/cored20rpg/magic-changed-5e-spells)
+
+[Заклинания альтернативные для пятой редакции в CORE D20 RPG](https://cyborgsandmages.com/posts/cored20rpg/magic-new-spells)
+
+[Заклинания альтернативные для пятой редакции в CORE D20 RPG](https://cyborgsandmages.com/posts/cored20rpg/magic-alternative-5e-spells)
+
+[Списки заклинаний по школам](https://cyborgsandmages.com/posts/cored20rpg/magic-school-spell-lists)
+
+[Списки заклинаний по классам](https://cyborgsandmages.com/posts/cored20rpg/magic-class-spell-lists)
+
 
 ---
 
