--- a/src/content/posts/cored20rpg/bestiary-1.mdx
+++ b/src/content/posts/cored20rpg/bestiary-1.mdx
@@ -9,27 +9,40 @@ tags:
 author: Антон "Palant" Палихов
 ---
 
-[Типовые особенности существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-traits)
+---
 
-[Типовые действия существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-actions)
+[БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
 
-[Типовые бонусные действия существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-bonus-actions)
+[Core d20 RPG - Бестиарий - Общие правила](https://cyborgsandmages.com/posts/cored20rpg/bestiary-rules))
 
-[Типовые реакции существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-reactions)
+[Core d20 RPG - Бестиарий - Виды существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-creature-types))
 
-[Типовые легендарные действия существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-legendary-actions)
+[Core d20 RPG - Бестиарий - Неигровые персонажи](https://cyborgsandmages.com/posts/cored20rpg/bestiary-npc))
+
+[Core d20 RPG - Бестиарий - Типовые особенности существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-traits)
+
+[Core d20 RPG - Бестиарий - Типовые Действия существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-actions)
+
+[Core d20 RPG - Бестиарий - Типовые Бонусные Действия существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-bonus-actions)
+
+[Core d20 RPG - Бестиарий - Типовые реакции существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-reactions)
+
+[Core d20 RPG - Бестиарий - Типовые Легендарные Действия существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-legendary-actions)
+
+[Core d20 RPG - Бестиарий - Опции персонажей для неигровых персонаажей](https://cyborgsandmages.com/posts/cored20rpg/bestiary-pc-options-for-npc)
+
+[Core d20 RPG - Бестиарий - Типовые шаблоны](https://cyborgsandmages.com/posts/cored20rpg/bestiary-templates)
+
+[Core d20 RPG - Бестиарий - ФОРМАТ СТАТБЛОКА](/posts/cored20rpg/bestiary-statblock)
+
+[Core d20 RPG - Бестиарий](https://cyborgsandmages.com/posts/core-d20/bestiary)
 
 ---
 
-[Типовые шаблоны](https://cyborgsandmages.com/posts/cored20rpg/bestiary-templates)
+[Core d20 RPG - Бестиарий - текущая версия](https://1drv.ms/w/s!Atcrhwwo1lBA5JRFT2Ce_TYOF5UAEg?e=OkpOIj)
+
 
 ---
-
-[ФОРМАТ СТАТБЛОКА](/posts/cored20rpg/bestiary-statblock)
-
----
-
-[БЕСТИАРИЙ](https://cyborgsandmages.com/posts/core-d20/bestiary)
 
 [ПРО КОМАНДИРОВ И СОЛДАТ](https://cyborgsandmages.com/posts/core-d20/about-commanders-and-units)
 
@@ -41,7 +54,7 @@ author: Антон "Palant" Палихов
 
 [ADDITIONAL STATBLOCKS](https://1drv.ms/w/s!Atcrhwwo1lBA19xPShMJ5qjesqPpaA?e=IkqJmE)
 
----
+
 
 ---
 
@@ -103,3 +116,11 @@ author: Антон "Palant" Палихов
 > ### РЕАКЦИИ
 >
 > **_Парирование._** Дроу добавляет +2(1к4) к КЗ против одной атаки ближнего боя, которая должна попасть по нему. Для этого дроу должен видеть атакующего и использовать оружие ближнего боя.
+
+---
+
+[СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
+
+[СТАТЬИ СВЯЗАННЫЕ С РАЗРАБОТКОЙ CORE D20 RPG](https://cyborgsandmages.com/core-d20/1)
