--- a/src/content/posts/cored20rpg/bestiary-actions.mdx
+++ b/src/content/posts/cored20rpg/bestiary-actions.mdx
@@ -80,3 +80,52 @@ Striker
 ---
 
 [БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
+
+[Core d20 RPG - Бестиарий - Общие правила](https://cyborgsandmages.com/posts/cored20rpg/bestiary-rules))
+
+[Core d20 RPG - Бестиарий - Виды существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-creature-types))
+
+[Core d20 RPG - Бестиарий - Неигровые персонажи](https://cyborgsandmages.com/posts/cored20rpg/bestiary-npc))
+
+[Core d20 RPG - Бестиарий - Типовые особенности существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-traits)
+
+[Core d20 RPG - Бестиарий - Типовые Действия существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-actions)
+
+[Core d20 RPG - Бестиарий - Типовые Бонусные Действия существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-bonus-actions)
+
+[Core d20 RPG - Бестиарий - Типовые реакции существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-reactions)
+
+[Core d20 RPG - Бестиарий - Типовые Легендарные Действия существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-legendary-actions)
+
+[Core d20 RPG - Бестиарий - Опции персонажей для неигровых персонаажей](https://cyborgsandmages.com/posts/cored20rpg/bestiary-pc-options-for-npc)
+
+[Core d20 RPG - Бестиарий - Типовые шаблоны](https://cyborgsandmages.com/posts/cored20rpg/bestiary-templates)
+
+[Core d20 RPG - Бестиарий - ФОРМАТ СТАТБЛОКА](/posts/cored20rpg/bestiary-statblock)
+
+[Core d20 RPG - Бестиарий](https://cyborgsandmages.com/posts/core-d20/bestiary)
+
+---
+
+[Core d20 RPG - Бестиарий - текущая версия](https://1drv.ms/w/s!Atcrhwwo1lBA5JRFT2Ce_TYOF5UAEg?e=OkpOIj)
+
+
+---
+
+[ПРО КОМАНДИРОВ И СОЛДАТ](https://cyborgsandmages.com/posts/core-d20/about-commanders-and-units)
+
+---
+
+[E5E BESTIARY REV 13](https://1drv.ms/w/s!Atcrhwwo1lBA2YMLOf2_oW923CRzlw?e=zKguUK)
+
+[E5E BESTIARY REV 12](https://1drv.ms/w/s!Atcrhwwo1lBA1_AFBntbrfdY9VE5-A?e=i427eK)
+
+[ADDITIONAL STATBLOCKS](https://1drv.ms/w/s!Atcrhwwo1lBA19xPShMJ5qjesqPpaA?e=IkqJmE)
+
+---
+
+[СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
+
+[СТАТЬИ СВЯЗАННЫЕ С РАЗРАБОТКОЙ CORE D20 RPG](https://cyborgsandmages.com/core-d20/1)
