--- a/src/content/posts/cored20rpg/feats.mdx
+++ b/src/content/posts/cored20rpg/feats.mdx
@@ -8,16 +8,96 @@ tags:
 author: Антон "Palant" Палихов
 ---
 
+Черта представляет собой талант или область знаний, которая дает персонажу особые возможности. Она воплощает обучение, опыт и способности, выходящие за рамки того, что предоставляет класс.
+
+На определенных уровнях ваш класс дает вам особенность Улучшение Характеристик Используя необязательное правило по чертам, ,вы можете отказаться от этой особенности, чтобы взять черту по вашему выбору. Каждую черту можно брать только один раз, если в её описании не сказано обратное.
+
+Вы должны соответствовать всем необходимым условиям, указанные в черте, чтобы взять эту черту. Если вы когда-нибудь потеряете необходимое условие черты, вы не сможете использовать эту черту, пока не восстановите необходимое условие. Например, черта Борец требует наличия Силы 13 или выше.  Если ваша Сила по каким-то причинам опустится ниже 13 (например, из-за проклятья) вы не получаете преимуществ от этой черты, пока не восстановите Силу.
+
 ## Получение черт
+
+Персонаж получает черты из двух основных источников:
+
+1. При повышении общего уровня персонажа
+2. При достижении определенных уровней в своих классах
+
+Дополнительно персонаж получает 1 черту на 1-ом уровне.
+
+| УРОВЕНЬ ПЕРСОНАЖА | ПОЛУЧЕНИЕ ЧЕРТ ОТ ПРОГРЕССИИ ОБЩЕГО УРОВНЯ | ПОЛУЧЕНИЕ ЧЕРТ ОТ ПРОГРЕССИИ УРОВНЯ КЛАССА |
+|-------------------|--------------------------------------------|--------------------------------------------|
+| 1                 | ЧЕРТА ПРЕДЫСТОРИИ                          |                                            |
+| 2                 |                                            |                                            |
+| 3                 |                                            |                                            |
+| 4                 |                                            | ЧЕРТА                                      |
+| 5                 | ЧЕРТА                                      |                                            |
+| 6                 |                                            |                                            |
+| 7                 |                                            |                                            |
+| 8                 |                                            | ЧЕРТА                                      |
+| 9                 |                                            |                                            |
+| 10                | ЧЕРТА                                      |                                            |
+| 11                |                                            |                                            |
+| 12                |                                            | ЧЕРТА                                      |
+| 13                |                                            |                                            |
+| 14                |                                            |                                            |
+| 15                | ЧЕРТА                                      |                                            |
+| 16                |                                            | ЧЕРТА                                      |
+| 17                |                                            |                                            |
+| 18                |                                            |                                            |
+| 19                |                                            | ЧЕРТА                                      |
+| 20                | ЧЕРТА                                      |
+
+
+Некоторые классы также получают черты на 6-ом, 10-ом или 14-ом уровне.
+
+## Категории черт
+
+Черты разбиты на категории в зависимости от того, на какие аспекты персонажа они влияют.
+
+**Боевые черты.**
+
+**Заклинательские черты.**
+
+**Личностные черты.**
+
+**Черты предыстории.** Дополнительно выделяют черты предыстории, которые персонаж может получить на 1-ом уровне.
 
 ## Черты предыстории
 
 ## Боевые черты
 
+
+
+
+
 ## Заклинательские черты
+
+### Лучник-заклинатель
+
+**Требование:** Способность сотворять хотя бы одно заклинание 1-го круга или выше, владение длинным или коротким луком.
+
+Вы можете действием вложить в стрелу, которую держите, эффект заклинания 1-го круга или выше. Вы сотворяете заклинание как обычно, но эффект заклинания не проявляется до тех пор, пока стрела не будет использована в атаке. Вы можете вложить только заклинание, воздействующее на одно существо, или заклинание, воздействующее на область, такую как сфера, облако или цилиндр. Стрела удерживает эффект заклинания до конца вашего следующего длинного отдыха или до тех пор, пока она не будет использована в успешной атаке.
+
+Если вы сотворяете заклинание, воздействующее на одно существо, то в следующий раз, когда стрела, усиленная этим заклинанием, попадает в существо, атака наносит урон как обычно, а затем применяется эффект заклинания к цели.
+
+Если вы сотворили заклинание, воздействующее на область, атака по существу может быть не успешной, но вложенное заклинание все равно сработает. Вместо этого вы разрешаете эффект заклинания с места или существа, в которое была произведена атака. Если атака была успешной, то стрела наносит обычный урон от дальнобойной атаки оружием. 
+
+Как только заклинания было разряжено, оно исчезает со стрелы.
+
+### Написание свитков
+
+**Требование:** Способность сотворять хотя бы одно заклинание 1-го круга или выше.
+
+Вы научились создавать свитки заклинаинй, сохраняя заклинания для будущего применения. Вы можете создать свиток заклинаний (подробно описанный в Руководстве Мастера Игры) любого заклинания, которое вы можете сотворять  1-го круга или выше. Процесс написания свитков заклинаний требует специальных чернил и бумаги стоимостью 50 зм умноженных на квадрат круга заклинания, плюс стоимость любых материальных компонентов необходимых для заклинания.
+
+Написание свитка занимает 1 день на каждый круг заклинания. Если вы готовите заклинания, вы должны подготовить заклинание на время процесса, и каждый день вы должны расходовать ячейку заклинания круга заклинания или выше. В конце процесса вы должны совершить проверку Интеллекта, добавляя свой бонус владения к броску, против КС равного 5 + удвоенный круг заклинания. В случае успеха, вы создаете свиток заклинаний, а при провале, вы совершили ошибки при создании свитка и должны будете начать процесс с самого начала, включая повторную оплату чернил, бумаги и компонентов материала.
 
 ## Личностные черты
 
+---
+
+[CORE D20 RPG FEATS](https://1drv.ms/w/s!Atcrhwwo1lBA5J484WwurF6TKBrQ7w?e=o0HkEc)
+
+[E5E FEATS REV 25 16102022](https://1drv.ms/w/s!Atcrhwwo1lBA5JQO-5lmOrFrdmqLSg?e=Hzct8m)
 
 ---
 
