--- a/src/content/posts/cored20rpg/equipment-herbal-brews.mdx
+++ b/src/content/posts/cored20rpg/equipment-herbal-brews.mdx
@@ -119,3 +119,16 @@ tags:
 Запах бодрствования, 10 зм. Они поставляются в маленьких пузырьках, обернутых тканью. Вскрытие флакона с запахом бодрствования под носом у цели, находящейся без сознания, приводит к немедленному возвращению в сознание.
 
 **Средство от паразитов, 25 зм.** Изготовлено из животных жиров, трав и болотного газа. Это соединение заставляет всех кровососущих паразитов избегать носителя. Если эти паразиты достаточно отчаянны, чтобы напасть на пользователя, они делают это с невыгодным положением. Репеллент мало растворим в воде, поэтому его можно использовать для отпугивания пиявок и миног. На суше приложение длится 3 часа; в воде его необходимо ввести повторно через 1 час. Из-за запаха этот репеллент не пользуется популярностью. Любой, кто его использует, делает все проверки Харизмы с помехой. Репеллент можно удалить, промыв не менее чем двумя бурдюками вина.
+
+
+---
+
+[ТАБЛИЦЫ СНАРЯЖЕНИЯ В DOCX](https://1drv.ms/w/s!Atcrhwwo1lBA5JkMQ9YeCV7_E2Tkng?e=mtAYbD)
+
+---
+
+[СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
+
+[СТАТЬИ СВЯЗАННЫЕ С РАЗРАБОТКОЙ CORE D20 RPG](https://cyborgsandmages.com/core-d20/1)
