--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -122,3 +122,11 @@ links:
 
 [Проверки характеристик](https://cyborgsandmages.com/posts/articles/index-skill-checks)
 
+
+---
+
+ОСНОВНОЙ ПРОЕКТ В ТЕКУЩИЙ МОМЕНТ - [CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+
+---
+
+Дружественные к нам сайты и проекты - [Друзья](https://cyborgsandmages.com/friends)
