--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -234,6 +234,8 @@ Core d20 RPG - это проект по написанию набора прав
 
 ### Sly Flourish Lazy DM Reference Document
 
+[Справочный документ Ленивого Мастера](https://www.worldanvil.com/w/lazydm-resource-document-ru) 
+
 ## Прочее
 
 ### Конверсия предметов из BG1/2 в пятую редакцию
