--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -122,6 +122,9 @@ links:
 
 [Проверки характеристик](https://cyborgsandmages.com/posts/articles/index-skill-checks)
 
+---
+
+[Важные теги](https://cyborgsandmages.com/tag-index)
 
 ---
 
