--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -97,34 +97,12 @@ links:
 
 ---
 
-Просмотреть тематические перечни статей и переводов вы можете ниже
+## Индексы материалов
+
+[Тематический индекс статей и переводов](https://cyborgsandmages.com/index-2)
 
 
-[Вождение городских кампаний](https://cyborgsandmages.com/posts/articles/index-сity-campaigns)
-
-[Тактика существ и столкновения с ними](https://cyborgsandmages.com/posts/articles/bestiary-tactics-index)
-
-[Социальные столкновения](https://cyborgsandmages.com/posts/articles/index-social-encounters)
-
-[Деятельность простоя](https://cyborgsandmages.com/posts/articles/index-downtime)
-
-[Экономика D&D](https://cyborgsandmages.com/posts/articles/index-economy)
-
-[Создание магических предметов D&D](https://cyborgsandmages.com/posts/articles/index-creating-magic-items)
-
-[Наемные солдаты и наемники D&D](https://cyborgsandmages.com/posts/articles/index-hirelings)
-
-[Исследование гексов](https://cyborgsandmages.com/posts/articles/index-hexcrawl)
-
-[Твердыня](https://cyborgsandmages.com/posts/articles/index-stronghold)
-
-[Массовые сражения](https://cyborgsandmages.com/posts/articles/index-mass-combat)
-
-[Проверки характеристик](https://cyborgsandmages.com/posts/articles/index-skill-checks)
-
----
-
-[Важные теги](https://cyborgsandmages.com/tag-index)
+[индекс статей по важным тегам](https://cyborgsandmages.com/tag-index)
 
 ---
 
