--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -1,5 +1,5 @@
 ---
-title: Проект
+title: Киборги и чародеи
 description: 'D&D и Настольные Ролевые Игры – Статьи, Ресурсы, Материалы'
 links:
   - label: 'Создатель чудовищ'
@@ -106,8 +106,3 @@ links:
 
 ---
 
-ОСНОВНОЙ ПРОЕКТ В ТЕКУЩИЙ МОМЕНТ - [CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
-
----
-
-Дружественные к нам сайты и проекты - [Друзья](https://cyborgsandmages.com/friends)
