--- a/src/content/singles/index-1.mdx
+++ b/src/content/singles/index-1.mdx
@@ -3,12 +3,17 @@ title: Страницы сайта
 description: Страницы сайта
 ---
 
+[RSS](https://cyborgsandmages.com/rss.xml)
+
+[Создатель чудовищ](https://monstermaker.cyborgsandmages.com/)
+
+## СТРАНИЦЫ
 
 ОСНОВНОЙ ПРОЕКТ В ТЕКУЩИЙ МОМЕНТ - [CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
 
 [Полезные загрузки](https://cyborgsandmages.com/downloads)
 
-[Страница проекта](https://cyborgsandmages.com/srd-translate)
+[Перевод SRD](https://cyborgsandmages.com/srd-translate)
 
 Дружественные к нам сайты и проекты - [Друзья](https://cyborgsandmages.com/friends)
 
@@ -16,10 +21,15 @@ description: Страницы сайта
 
 [Руководство Foundry ](https://cyborgsandmages.com/foundry-guide)
 
-[Roll20](https://cyborgsandmages.com/roll20-guide)
+[Руководство Roll20](https://cyborgsandmages.com/roll20-guide)
 
 [Lazy DM Resource document](https://cyborgsandmages.com/lazydm-resource-document-ru)
 
+[Поддержать проект](https://cyborgsandmages.com/support-us)
+
+[Связаться с нами](https://cyborgsandmages.com/contact-us)
+
+[Наши материалы на dmsguild.com](https://cyborgsandmages.com/online=shops)
 
 ## КАТЕГОРИИ
 
