--- a/src/content/singles/index-1.mdx
+++ b/src/content/singles/index-1.mdx
@@ -9,7 +9,7 @@ description: Страницы сайта
 
 ## СТРАНИЦЫ
 
-ОСНОВНОЙ ПРОЕКТ В ТЕКУЩИЙ МОМЕНТ - [CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+[CORE D20 RPG](https://cyborgsandmages.com/cored20rpg)
 
 [Полезные загрузки](https://cyborgsandmages.com/downloads)
 
@@ -33,24 +33,24 @@ description: Страницы сайта
 
 ## КАТЕГОРИИ
 
-[СТАТЬИ](https://cyborgsandmages.com/articles/)
+[СТАТЬИ](https://cyborgsandmages.com/articles/)1
 
-[Core-d20](https://cyborgsandmages.com/core-d20)
+[Core-d20](https://cyborgsandmages.com/core-d20/1)
 
-[CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+[CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
 
-[FORGOTTEN REALMS](https://cyborgsandmages.com/forgotten-realms/)
+[FORGOTTEN REALMS](https://cyborgsandmages.com/forgotten-realms/1)
 
-[MARWANG](https://cyborgsandmages.com/marwang/)
+[MARWANG](https://cyborgsandmages.com/marwang/1)
 
-[SAGE ADVICE](https://cyborgsandmages.com/sage-advice)/
+[SAGE ADVICE](https://cyborgsandmages.com/sage-advice/1)
 
-[SRD](https://cyborgsandmages.com/srd/)
+[SRD](https://cyborgsandmages.com/srd/1)
 
-[ПЕРЕВОДЫ](https://cyborgsandmages.com/translations)
+[ПЕРЕВОДЫ](https://cyborgsandmages.com/translations/1)
 
 ## Индексы материалов
 
 [Тематический индекс статей и переводов](/index-2)
 
-[индекс статей по важным тегам](/tag-index)
+[Индекс статей по важным тегам](/tag-index)
