--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -96,3 +96,5 @@ links:
 Как поддержать нашу деятельность вы можете узнать в разделе [Поддержать проект](https://cyborgsandmages.com/support-us)
 
 ---
+
+[Страницы сайта](https://cyborgsandmages.com/index-1)
