--- a/src/content/singles/index-1.mdx
+++ b/src/content/singles/index-1.mdx
@@ -11,11 +11,11 @@ description: Страницы сайта
 
 [CORE D20 RPG](https://cyborgsandmages.com/cored20rpg)
 
-[Полезные загрузки](https://cyborgsandmages.com/downloads)
-
 [Перевод SRD](https://cyborgsandmages.com/srd-translate)
 
-Дружественные к нам сайты и проекты - [Друзья](https://cyborgsandmages.com/friends)
+[Ресурсы](https://cyborgsandmages.com/resources)
+
+[Полезные загрузки](https://cyborgsandmages.com/downloads)
 
 [КНИГИ](https://cyborgsandmages.com/books)
 
@@ -25,17 +25,21 @@ description: Страницы сайта
 
 [Lazy DM Resource document](https://cyborgsandmages.com/lazydm-resource-document-ru)
 
+[Наши материалы на dmsguild.com](https://cyborgsandmages.com/online=shops)
+
 [Поддержать проект](https://cyborgsandmages.com/support-us)
 
 [Связаться с нами](https://cyborgsandmages.com/contact-us)
 
-[Наши материалы на dmsguild.com](https://cyborgsandmages.com/online=shops)
+[Полезные ссылки](https://cyborgsandmages.com/links)
+
+[Друзья](https://cyborgsandmages.com/friends)
 
 ## КАТЕГОРИИ
 
-[СТАТЬИ](https://cyborgsandmages.com/articles/)1
+[СТАТЬИ](https://cyborgsandmages.com/articles/1)
 
-[Core-d20](https://cyborgsandmages.com/core-d20/1)
+[Core d20](https://cyborgsandmages.com/core-d20/1)
 
 [CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
 
@@ -51,6 +55,10 @@ description: Страницы сайта
 
 ## Индексы материалов
 
+[индекс](/index-1)
+
 [Тематический индекс статей и переводов](/index-2)
 
 [Индекс статей по важным тегам](/tag-index)
+
+[Индекс статей по работе сайта](https://cyborgsandmages.com/posts/articles/docs-index)
