--- a/src/content/singles/books.mdx
+++ b/src/content/singles/books.mdx
@@ -16,11 +16,9 @@ tags:
   - Руководство Мастера
 ---
 
-Книги старых редакций
-
 ## OD&D
 
-[Кольчуга](https://cyborgsandmages.com/files/downloads/odd-chainmail-kolchuga-3-izdanie-2rep-rus.docx)
+<file file="odd-chainmail-kolchuga-3-izdanie-2rep-rus.docx" title="Кольчуга"/>
 
 ## AD&D 1ed
 
