--- a/src/content/singles/index-1.mdx
+++ b/src/content/singles/index-1.mdx
@@ -62,3 +62,5 @@ description: Страницы сайта
 [Индекс статей по важным тегам](/tag-index)
 
 [Индекс статей по работе сайта](https://cyborgsandmages.com/posts/articles/docs-index)
+
+[Индекс справочных материалов доступных онлайн](https://cyborgsandmages.com/reference-index)
