--- a/src/content/singles/reference-index.mdx
+++ b/src/content/singles/reference-index.mdx
@@ -7,6 +7,8 @@ description: Индекс справочных материалов
 
 [Lazy DM Resource document](https://cyborgsandmages.com/lazydm-resource-document-ru)
 
+Lazy DM 5E MONSTER BUILDER
+
 ## CORE D20 RPG
 
 [ЧЕРТЫ](https://cyborgsandmages.com/posts/cored20rpg/feats)
