--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -9,7 +9,7 @@ links:
 ![](~assets/branding/banner.jpg)
 
 
-[ПРО НАС](https://cyborgsandmages.com/about-us) | [СВЯЗАТЬСЯ С НАМИ](https://cyborgsandmages.com/contact-us)
+[ПРО НАС](https://cyborgsandmages.com/about-us) | [СВЯЗАТЬСЯ С НАМИ](https://cyborgsandmages.com/contact-us) | [Поддержать проект](https://cyborgsandmages.com/support-us) | [Страницы сайта](https://cyborgsandmages.com/index-1)
 
 ---
 
@@ -43,6 +43,4 @@ links:
 
 Как поддержать нашу деятельность вы можете узнать в разделе [Поддержать проект](https://cyborgsandmages.com/support-us)
 
----
 
-[Страницы сайта](https://cyborgsandmages.com/index-1)
