--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -7,7 +7,7 @@ description: Созданная в сообществе Киборги и Чар
 
 Последняя версия для печати: [Версия для публикации](https://1drv.ms/w/s!Atcrhwwo1lBA4-MYO3eLXJyl4dRe2Q?e=bzKp9H)
 
-v.025-18112023 (обновление от 08.12.2023)
+v.026
 
 ---
 
@@ -113,23 +113,26 @@ v.025-18112023 (обновление от 08.12.2023)
 ## БЕСТИАРИЙ
 
 1.  [ВИДЫ СУЩЕСТВ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-creatures-types)
-
 2.  ОСОБЕННОСТИ ВИДОВ СУЩЕСТВ
-
 3.  ШАБЛОНЫ
+4.  Звери
+5.  Неигровые персонажи
+6.  
+
 
 ---
 
 ## РУКОВОДСТВО МАСТЕРА
 
 1.  СОЗДАНИЕ ПРИКЛЮЧЕНИЙ
-
 2.  СОЗДАНИЕ СЕТТИНГА
-
 3.  ВОЖДЕНИЕ
 
 ---
 
+Ширма Мастера
+
+---
 ## ДОПОЛНИТЕЛЬНОЕ
 
 [Справочник цен](https://1drv.ms/w/s!Atcrhwwo1lBA34Zyc4aJTXfDKECa2A?e=TXivVo)
@@ -139,6 +142,7 @@ v.025-18112023 (обновление от 08.12.2023)
 [Базовые боевые приемы](https://1drv.ms/w/s!Atcrhwwo1lBA2dMyCM_VzyPoHuZPGQ?e=PQCY66)
 
 [Состояния](https://1drv.ms/w/s!Atcrhwwo1lBA2dM4es-k2Vu9fId01A?e=gtN8VU)  
+
 
 ---
 
