--- a/src/content/singles/lazydm-resource-document-ru.mdx
+++ b/src/content/singles/lazydm-resource-document-ru.mdx
@@ -28,6 +28,7 @@ This work includes material taken from the System Reference Document 5.1 ("SRD 5
 
 На [Crit.Tech's LGMRD Github Repo](https://github.com/crit-tech/LGMRD) можно найти несколько версий этого документа, включая маркдаун, EPUB и JSON.
 
+<Aside v= "ivory|gold|wave|crimson" >
 **ПЕРЕВОД:** КИБОРГИ И ЧАРОДЕИ, 2024 
 
 **СЛОВАРЬ:** PALANT
@@ -39,6 +40,11 @@ This work includes material taken from the System Reference Document 5.1 ("SRD 5
 ДОПОЛНИТЕЛЬНЫЕ МАТЕРИАЛЫ ВЫ МОЖЕТЕ НАЙТИ У НАС НА САЙТЕ https://cyborgsandmages.com/
 
 ДЛЯ ОБСУЖДЕНИЯ – ПРИСОЕДИНЯЙТЕСЬ К ДИСКОРД СЕРВЕРУ СООБЩЕСТВА https://discord.gg/yrJqvCqU3w ИЛИ ТЕЛЕГРАМ КАНАЛУ https://t.me/cyborgs_and_mages
+
+</Aside>
+
+
+
 
 **Содержание**
 
@@ -150,6 +156,7 @@ This work includes material taken from the System Reference Document 5.1 ("SRD 5
 - Создать сильный старт
 - Определить улики и тайны
 - Создать фантастические локации
+- 
 ## <a name="_toc159247800"></a>***Процесс подготовки ленивого мастера***
 **Инструменты ленивой подготовки**
 
