--- a/src/content/singles/lazydm-resource-document-ru.mdx
+++ b/src/content/singles/lazydm-resource-document-ru.mdx
@@ -28,7 +28,7 @@ This work includes material taken from the System Reference Document 5.1 ("SRD 5
 
 На [Crit.Tech's LGMRD Github Repo](https://github.com/crit-tech/LGMRD) можно найти несколько версий этого документа, включая маркдаун, EPUB и JSON.
 
-<Aside v= "ivory|gold|wave|crimson" >
+<Aside v= "crimson" >
 **ПЕРЕВОД:** КИБОРГИ И ЧАРОДЕИ, 2024 
 
 **СЛОВАРЬ:** PALANT
@@ -37,9 +37,9 @@ This work includes material taken from the System Reference Document 5.1 ("SRD 5
 
 *ВЕРСИЯ 0.9 ОТ 19.02.2024*
 
-ДОПОЛНИТЕЛЬНЫЕ МАТЕРИАЛЫ ВЫ МОЖЕТЕ НАЙТИ У НАС НА САЙТЕ https://cyborgsandmages.com/
+ДОПОЛНИТЕЛЬНЫЕ МАТЕРИАЛЫ ВЫ МОЖЕТЕ НАЙТИ У НАС НА [САЙТЕ](https://cyborgsandmages.com/) 
 
-ДЛЯ ОБСУЖДЕНИЯ – ПРИСОЕДИНЯЙТЕСЬ К ДИСКОРД СЕРВЕРУ СООБЩЕСТВА https://discord.gg/yrJqvCqU3w ИЛИ ТЕЛЕГРАМ КАНАЛУ https://t.me/cyborgs_and_mages
+ДЛЯ ОБСУЖДЕНИЯ – ПРИСОЕДИНЯЙТЕСЬ К [ДИСКОРД СЕРВЕРУ СООБЩЕСТВА](https://discord.gg/yrJqvCqU3w)  ИЛИ [ТЕЛЕГРАМ КАНАЛУ](https://t.me/cyborgs_and_mages) 
 
 </Aside>
 
