--- a/src/content/singles/about-us.mdx
+++ b/src/content/singles/about-us.mdx
@@ -2,3 +2,68 @@
 title: Про нас
 description: Про нас
 ---
+
+## Про нас
+
+Мы небольшое и дружное сообщество, которое водит и играет игры по Dungeon & Dragons 5e и другим системам.
+
+Кто-то из нас рисует, кто-то переводит, кто-то делает хорошие хаки правил, которые улучшают качество игры.
+
+На этом сайте мы выкладываем как свои материалы, так и переводные и прочие статьи других авторов, преследуя цель обеспечить читателям доступ ко всей необходимой информации в одном месте.
+
+## Наша команда
+
+- Антон "Palant" Палихов - ГМ, аналитик, немного переводчик и собиратель знанинй по сеттингам. Пишет homebrew материалы для пятой редакции и всегда готов помочь другим мастерам и игрокам советом. Любит повторять фразу "Для самоорганизации сообщества ему необходим самоорганизатор".
+- Дмитрий "xattttta" Нелюбов - ГМ, игрок, переводчик, любит простые правила
+- Роман "JunkTurkey" Зверев, ГМ, программист
+- Ира "Featon" Кузюр, переводчик,
+- Станислав "Drakzar" Иванов, ГМ, переводчик-любитель, бывший локальный координатор Лиги Авантюристов
+- Семен, ГМ, цифровой художник
+- Алексей "HellFell", ГМ и прекрасный человек
+- Кирилл "Byrricade" Лысенков
+- m0ngo aka Greg
+- Дамир "Е..ный Далай Лама" Рахимов
+
+## Как появилось сообщество?
+
+Изначально это был сервер для вождения кампании Гром Штормового Короля - который был создан 31.12.2016. После того как Антон очень активно стал водить приключения в рамках организованной кампании Лига Авантюристов на сервер начало приходить много людей. Ьлагодаря вождению на онлайн-конвентах эпических приключений - количество людей выросло еще больше.
+
+И понемногу стало приходить понимание, что этот сервер является чем-то большим, чем простая площадка для вождения игр.
+
+## Вождение
+
+Мастера с этого сообщества водили игры в рамках Лиги Авантюристов практически на каждом онлайн-конвенте, в т.ч.участвуя в подготовке этих самих приключений в Roll20 и созданни для них карт.
+
+Таким образом мы провели все эпические приключения 1-8 сезонов Лиги Авантюристов, а также кампании Оракул Войны в Эберроне.
+
+Некоторые наши мастера при этом также начали водить и на английском языке.
+
+Добрая традиция как можно больше участвовать в проведении эпических приключений онлайн сохраняется и до сих пор.
+
+## Создание контента для dmsguild.com
+
+Подготовка к вождению кампаний всегда была трудоемкой и собранные материалы публиковались на dmsguild.com
+
+В число этих материалов входило и Собрание предысторий для Лиги Авантюристов, которое потом администраторы убрали с публикации (а жаль - оно стало к тому моменту электрумным бестселлером) и также другие материалы - направленные в первую очередь на мастеров, многие из которых стали бестселлерами на dmsguild.com
+
+В какой то момент времени была предпринята попытка публикации русскоязычного приключения - **Однажды на постоялом дворе**. К сожалению, несмотря на множество положительных отзывов, коммерческого успеха эта авантюра не имела.
+
+## Участие в переводах материалов D&D
+
+Начиная с выхода Руководства Воло по чудовищам многие участники сообщества - Юра, Ира, Дима, Антон, Кирилл принимают активное участие в проектах переводов материалов D&D и приключений Лиги Авантюристов.
+
+### Перевод SRD 5.1
+
+Помимо этого была начата работа над бесплатным переводом SRD 5.1 на русский язык с целью предоставления сообществу полностью легальных, базовых правил пятой редакции, используя которые каждый мог бы создавать свои материалы и не зависеть от правообладателей и при этом не используя пиратский перевод, который содержит множество ошибок и неточностей.
+
+[Перевод SRD 5.1 на русский](https://cyborgsandmages.com/srd-translate)
+
+Опыт работы над переводом на русский язык был использован и при помощи в переводе SRD 5.1 на украинский язык.
+
+## Создание домашних правил и homebrew
+
+Закономерным итогом многолетнего вождения D&D 5e и хаков на основе ее движка стало написание собственных вариантных правил и дополнений, которые в целом также хорошо были восприняты англоязычным сообществом - [Palant Guide to Combat](https://www.dmsguild.com/product/305891/Palants-Guide-to-Combat?affiliate_id=759617), [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs-of-Forgotten-Realms?affiliate_id=759617) в частности.
+
+После чего были начаты публикации и на drivethrurpg.com
+
+В данный момент основной гейм дизайнер - Антон занят проектом расширения и дополнения основных правил пятой редакции с целью создания русскоязычного варианта правил, который был бы доступен каждому игроку и мастеру и при этом создавал новые возможности для учасников (по сравнению с официальными правилами)
