--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -43,20 +43,23 @@ v.026
 
 [Оружие](https://cyborgsandmages.com/posts/cored20rpg/weapons)
 
-[Огнестрельное оружие](https://cyborgsandmages.com/posts/cored20rpg/firearms)
+[Аммуниция](https://cyborgsandmages.com/posts/cored20rpg/equipment-ammunition)
+
+[**Одежда**](https://cyborgsandmages.com/posts/cored20rpg/equipment-clothing)
 
 [Алхимические товары и инструменты](https://cyborgsandmages.com/posts/cored20rpg/alchemical-items-and-substances)
 
-**Одежда**
-
-**Травяные смеси**
+[**Травяные смеси**](https://cyborgsandmages.com/posts/cored20rpg/herbal-brews)
 
 [**Транспорт**](https://cyborgsandmages.com/posts/cored20rpg/equipment-transport)
 
-[**Справочные таблицы по снаряжению**](https://cyborgsandmages.com/posts/cored20rpg/equipment---tables)
+[Драгоценные камни](https://cyborgsandmages.com/posts/cored20rpg/equipment-gems)
+
+[Огнестрельное оружие](https://cyborgsandmages.com/posts/cored20rpg/firearms)
+
+[**Справочные таблицы по снаряжению**](https://cyborgsandmages.com/posts/cored20rpg/equipment-tables)
 
 7.  [ХАРАКТЕРИСТИКИ, НАВЫКИ, ПРОВЕРКИ](https://cyborgsandmages.com/posts/cored20rpg/abilities-checks-skills)
-
 
 8.  [ПРИКЛЮЧЕНИЯ](https://cyborgsandmages.com/posts/cored20rpg/adventures)
 
