--- a/src/content/posts/cored20rpg/downtime.mdx
+++ b/src/content/posts/cored20rpg/downtime.mdx
@@ -11,6 +11,10 @@ author: Антон "Palant" Палихов
 
 Деятельность во время простоя
 
+## Написание волшебных свитков
+
+
+
 ---
 
 [СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
