--- a/src/content/posts/cored20rpg/feats.mdx
+++ b/src/content/posts/cored20rpg/feats.mdx
@@ -952,6 +952,21 @@ author: Антон "Palant" Палихов
 -- Вы добавляете 1 заклинание из списка заклинаний вашего класса, круга, который вы можете сотворять, выбранной школы магии в список заклинаний, которые вы знаете или можете подготовить.
 
 -- Вы можете сотворить заклинание из выбранной школы на один круг выше без дополнительных затрат. Вы должны уметь сотворять заклинания этого более высокого круга. После использования этой способности вы должны завершить длинный отдых, прежде чем сможете использовать ее снова.
+
+### Специализация доспехов
+Вы провели бесчисленное количество часов, приспосабливая свое тело к потребностям ношения доспехов. 
+
+Вы получаете следующие преимущества:
+	
+- Ваш показатель ловкости, телосложения или силы увеличивается на 1, максимум до 20.
+
+Когда вы впервые берете эту черту, выберите легкий, средний или тяжелый доспех. Вы должны владеть выбранным типом доспехов. Нося выбранный доспех, вы получаете перечисленные преимущества:
+- **Легкий доспех:** ваш КЗ увеличивается на 1.
+- **Средний доспех:** вы можете прибавить к своему КЗ не 2, а 3, если ваша ловкость равна 16 или выше.
+- **Тяжелый доспех:** Дробящий, колющий и рубящий урон, получаемый от немагического оружия, уменьшается на 3.
+- 
+Вы можете выбрать эту черту несколько раз, каждый раз выбирая другой тип доспехов. Вы получаете преимущества каждого из выбранных вами типов доспехов.
+
 ### **Специалист по огнестрельному оружию**
 Вы владеете всеми видами огнестрельного оружия и инструментами для его изготовления.
 
